<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_jobs"
        android:icon="@drawable/ic_nav_work"
        android:title="@string/bottom_jobs" />

    <item
        android:id="@+id/nav_month"
        android:icon="@drawable/ic_calendar"
        android:title="@string/bottom_month" />

    <item
        android:id="@+id/nav_stats"
        android:icon="@drawable/ic_nav_chart"
        android:title="@string/bottom_stats" />

    <item
        android:id="@+id/nav_invoices"
        android:icon="@drawable/ic_nav_invoice"
        android:title="@string/bottom_invoices" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/bottom_settings" />
</menu>
